--- a/index.html
+++ b/index.html
@@ -20,37 +20,20 @@
     <header id="home">
         <div class="home wrapper">    
             
-            <!-- Simulate a smartphone / tablet -->
-            <div class="mobileContainer">
-
-                <!-- Top Navigation Menu -->
-                <div class="topnav">   
-                    <!-- <a href="#home" class="active"></a> -->
-                    <div id="myLinks">
-                        <a href="#home">Home</a>
-                        <a href="#about">About</a>
-                        <a href="#blog">blog</a>
-                        <a href="#contact">Contact</a>
-                    </div>
-                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                        <i class="fa fa-bars"></i>
-                    </a>
-                </div>
-            <!-- End smartphone / tablet look -->
+            <!-- ***************************************************************************************************************** -->
+            <div class="toggleButton" onClick="myFunction();">
+                <i class="fa fa-bars"></i>                
             </div>
-
-
-            <!-- Navbar -->
-            <nav>
-                <div id="menuNav">
-                    <ul>
-                        <li><a href="#home">home</a></li>
-                        <li><a href="#about">about</a></li>
-                        <li><a href="#blog">blog</a></li>
-                        <li><a href="#contact">contact</a></li>
-                    </ul>
-                </div>
+            <nav id="nav" class="nav">
+                <ul>
+                    <li><a href="#home">home</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#blog">blog</a></li>
+                    <li><a href="#contact">contact</a></li>
+                </ul>
             </nav>
+            <!-- ***************************************************************************************************************** --> 
+
             <!-- Bikerland -->
             <div class="flex"> 
                 <h1>bikerland</h1>
@@ -72,6 +55,7 @@
                     </ul>
                 </div>
             </div>
+
         </div>
     </header>
 
@@ -156,7 +140,7 @@
                 <!-- Contact -->
                 <div class="formWrapper">
                     <!-- Navbar (Transform to UPPERCASE) -->
-                    <nav>
+                    <nav class="bottomNav">
                         <ul>
                             <li><a href="#home">home</a></li>
                             <li><a href="#about">about</a></li>
@@ -199,12 +183,8 @@
 
     <script>
         function myFunction() {
-          var x = document.getElementById("myLinks");
-          if (x.style.display === "block") {
-            x.style.display = "none";
-          } else {
-            x.style.display = "block";
-          }
+            var topNav = document.getElementById("nav");
+            topNav.classList.toggle("show");
         }
     </script>
     
